--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>palash portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>welcome to</h1>
+            <h1><span class="orange-color">palash shaha</span> world</h1>
+            <h3>build climber and train stopper</h3>
+            <p>you might show me jumping ,climbing building and stoping trains.but nobody pays me a dim for that
+                work.that
+                is why i am learning and mastring web devloping .I will not stop until I become the web devlopment hero.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/palash-shaha-1aaa2a319/">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="palash.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
