--- a/index.html
+++ b/index.html
@@ -9,20 +9,41 @@
 </head>
 
 <body>
-    <section>
+    <section id="hero">
         <div class="half-width">
             <h1>welcome to</h1>
             <h1><span class="orange-color">palash shaha</span> world</h1>
             <h3>build climber and train stopper</h3>
-            <p>you might show me jumping ,climbing building and stoping trains.but nobody pays me a dim for that
+            <p>arning andyou might show me jumping ,climbing building and stoping trains.but nobody pays me a dim for
+                that
                 work.that
-                is why i am learning and mastring web devloping .I will not stop until I become the web devlopment hero.
+                is why i am le mastring web devloping .I will not stop until I become the web devlopment hero.
             </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/palash-shaha-1aaa2a319/">HIRE
                 ME</a>
         </div>
         <div class="half-width">
-            <img src="palash.png" alt="">
+            <img src=" palash.png" alt="">
+        </div>
+    </section>
+    <section class="about">
+        <div class="half-width">
+            <div class="about-img">
+                <img src="prp.png" alt="about-img">
+            </div>
+        </div>
+        <div class="half-width">
+            <div class="about-content">
+                <h1>dream big</h1>
+                <h2>become a web developer</h2>
+                <p>arning andyou might show me jumping ,climbing building and stoping trains.but nobody pays me a dim
+                    for
+                    that
+                    work.that
+                    is why i am le mastring web devloping .I will not stop until I become the web devlopment hero.</p>
+                <a class="link-button" target="_blank" href="https://web.facebook.com/razkumar.banarzi/photos">downlod
+                    photo</a>
+            </div>
         </div>
     </section>
 </body>
