--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section id="hero">
+    <section class="hero flexible-container">
         <div class="half-width">
             <h1>welcome to</h1>
             <h1><span class="orange-color">palash shaha</span> world</h1>
@@ -26,7 +26,7 @@
             <img src=" palash.png" alt="">
         </div>
     </section>
-    <section class="about">
+    <section class="about flexible-container">
         <div class="half-width">
             <div class="about-img">
                 <img src="prp.png" alt="about-img">
@@ -45,6 +45,27 @@
                     photo</a>
             </div>
         </div>
+    </section>
+    <section class="about-one ">
+        <h1 class="third">expriences</h1>
+        <div class="flexible-container">
+            <div class="half-width box-1">
+                <h1>full stack developer</h1>
+                <h3 class="orange-color">2022-present~ pro level developer</h3>
+                <p>Paragraphs are the building blocks of papers. Many students define paragraphs in terms of length: a
+                    paragraph is a group of at least five sentences, a paragraph is half a page long, etc. In reality,
+                    though, the unity and coherence of ideas among sentences is what constitutes a paragraph.</p>
+            </div>
+            <div class="half-width box-2 ">
+                <h1>baby web developer</h1>
+                <h3 class="orange-color">2022-2024~hero learner</h3>
+                <p>Paragraphs are the building blocks of papers. Many students define paragraphs in terms of length: a
+                    paragraph is a group of at least five sentences, a paragraph is half a page long, etc. In reality,
+                    though, the unity and coherence of ideas among sentences is what constitutes a paragraph.</p>
+
+            </div>
+        </div>
+
     </section>
 </body>
 
