--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>palash portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="p-red.png" type="image/x-icon">
 </head>
 
 <body>
